<resources>
    <string name="app_name">Contacts</string>
    <string name="form_title">create contact</string>
    <string name="settings_menu_option">settings</string>
    <string name="form_subtitle">Fill in all the fields. Remember that you have to provide real information.</string>
    <string name="name_field_hint">Name</string>
    <string name="name_field_helper">First name + last name</string>
    <string name="phone_field_hint">Phone</string>
    <string name="phone_field_helper">Personal / Professional</string>
    <string name="email_field_hint">Email</string>
    <string name="email_field_helper">Personal / Professional</string>
    <string name="notes_field_hint">Notes</string>
    <string name="notes_field_helper">Introduce everything you want to remember about the contact</string>
    <string name="pet_field_hint">Pet</string>
    <string name="pet_field_helper">Name or breed</string>
    <string name="password_field_hint">Password</string>
    <string name="password_field_helper">It must contains 8 characters</string>
    <string name="password_error_msg">Password length incorrect</string>
    <string name="add_photo">Add photo</string>
    <string name="family_option">Family</string>
    <string name="friend_option">Friend</string>
    <string name="work_option">Work</string>
    <string name="checkbox_text">I promise my data are correct and conform to the truth.</string>
    <string name="sedan_car">Sedan</string>
    <string name="truck_car">Truck</string>
    <string name="minivan_car">Minivan</string>
    <string name="car_field">Car type</string>
    <string name="settings_title">settings</string>
    <string name="sync_calendar">Sync calendar</string>
    <string name="events_reminders">Events and reminders</string>
    <string name="share_action_chip">Share data</string>
    <string name="send_action_chip">Send image</string>
    <string name="call_action_chip">Make a call</string>
</resources>
